--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name" translatable="false">Feedbacker</string>
-    <string name="title_activity_main">Feedbacker</string>
+    <string name="app_name" translatable="false">Feedbackr</string>
+    <string name="title_activity_main">Feedbackr</string>
 
     <string name="feedback">Feedback</string>
     <string name="map">Map</string>
