--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="switch_feedback">Switch Feedback to %s</string>
     <string name="switch_warning">Switching the Feedback will loose the current Category</string>
     <string name="switch_word">Switch</string>
+    <string name="noLocation">No Location available</string>
 </resources>
