--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="map">Map</string>
     <string name="feedbacks">Feedbacks</string>
 
-    <string name="auth_failed">Authentication failed</string>
+    <string name="auth_failed">Authentication failed - Please check connectivity and restart app</string>
 
     <string name="feedback_success">Feedback Send Successfully!</string>
     <string name="feedback_explain">Explain your Feedback…</string>
@@ -65,6 +65,7 @@
     <string name="switch_warning">Switching the Feedback will loose the current Category</string>
     <string name="switch_word">Switch</string>
     <string name="noLocation">No Location available</string>
+    <string name="noAuth">Not authenticated</string>
 
     <string name="menu_profile">Profile</string>
     <string name="menu_about">About</string>
@@ -87,4 +88,5 @@
 
     <string name="attach_profile_no_profile">No Profile</string>
     <string name="attach_profile_no_proile_desc">Please edit your profile to be able to attach it.</string>
+    <string name="no_feedback_found">No Feedback found</string>
 </resources>
