--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -89,4 +89,11 @@
     <string name="attach_profile_no_profile">No Profile</string>
     <string name="attach_profile_no_proile_desc">Please edit your profile to be able to attach it.</string>
     <string name="no_feedback_found">No Feedback found</string>
+
+    <string name="about_info">
+        Feedbackr wurde am Lehrstuhl für Programmiersprachen und Softwaretechnik der Heinrich-Heine-Universität Düsseldorf (stups.hhu.de) entwickelt.
+        \n
+        \nSollten Sie fragen zu dem Projekt haben können Sie sich gerne an @hhu.de wenden.
+    </string>
+
 </resources>
